--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,32 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+html,
+* {
+  font-family: var(--font-montserrat);
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  font-family: var(--font-montserrat);
+  /* background-color: black; */
+  background: url("../../public/bgImg.svg") no-repeat center 120%,
+    linear-gradient(to bottom, #f9ffff 0%, #38c8e6 100%);
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
-}
+/* backgroundImage: lightBg,
+  backgroundGradient: {
+    color1: '#F9FFFF',
+    color2: '#38C8E6',
+  }, */
